修改后台上传资讯图片路径bug

--- a/Application/Home/View/Demand/demandlist.html
+++ b/Application/Home/View/Demand/demandlist.html
@@ -45,12 +45,12 @@
 <body>
     <include file="Public/nav"/>
     <div class="bannerbox">
-        <img src="__PUBLIC__/images/需求发布bk.png">   
+        <img src="__PUBLIC__/images/demand_bk.png">   
     </div>
     <div class="infolist-main">
         <div class="leftmain">
             <div class="mainlefttitle">
-                <img src="__PUBLIC__/images/需求发布.png">
+                <img src="__PUBLIC__/images/publish_demand.png">
             </div>
             <div class="add"> 
                 <?php if(session('uid')): ?>
