--- a/Application/Home/View/Expert/expertlist.html
+++ b/Application/Home/View/Expert/expertlist.html
@@ -7,7 +7,7 @@
     
     <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css" type="text/css">
     <link rel="stylesheet" href="__PUBLIC__/css/home/listpage.css" type="text/css">
-     <!-- [if IE lt 10] -->
+    <!-- [if IE lt 9] -->
         <link rel="stylesheet" href="__PUBLIC__/css/home/ltIE8.css">
     <!-- [endif] -->
     <style>
@@ -77,11 +77,11 @@
 <body>
     <include file="Public/nav" />
     <div class="bannerbox">
-        <img src="__PUBLIC__/images/科技团队bk.png"> 
+        <img src="__PUBLIC__/images/team_bk.png"> 
     </div>
     <div class="infolist-main">
         <div class="leftmain">
-            <div class="mainlefttitle"><img src="__PUBLIC__/images/科技团队.png"></div>
+            <div class="mainlefttitle"><img src="__PUBLIC__/images/team.png"></div>
             <div class="mainbtn">
                <!--  <div class="navlist table_head active" >
                     <a href="#">专家团队</a>
