--- a/Application/Home/View/Team/teamlist.html
+++ b/Application/Home/View/Team/teamlist.html
@@ -7,71 +7,7 @@
     
     <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css" type="text/css">
     <link rel="stylesheet" href="__PUBLIC__/css/home/listpage.css" type="text/css">
-    <style>
-        .info-list{
-            overflow: hidden;
-            margin-bottom: 5px;
-        }
-        .info-list>img{
-            float: left; 
-            max-width:120px;
-            max-height: 160px; 
-        }
-        .team-info{
-            float: left; 
-            margin-top: 10px;
-        }
-        .team-info *{
-            vertical-align: middle;
-        }
-        .team-info h4{
-            margin: 5px;
-        }
-        .control-title-width{
-            display: inline-block;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow:ellipsis;
-        }
-        h4 a{
-            max-width: 465px;
-        }
-        h4 a:hover{
-            color: #e4393c;
-        }
-        .team-info span{
-            max-width: 440px;
-        }
-        p{
-            font-size: 14px;
-            margin: 5px;
-        }
-        .other-info{
-            float: right;
-            margin-top: 10px;
-        }
-         button{
-            background: #72CEDD;
-            color: #FAFDFD;
-            font-weight: 700;
-            border: 2px solid #0999B1;
-            border-radius: 5px;
-            padding: 5px 10px;
-            cursor: pointer;
-            margin-top: 10px;
-        }
-        button:hover{
-            background: #0F93A9;
-            color: white;
-        }
-        div.add{
-            text-align: center;
-        }
-        div.add img{
-            width: 200px;
-            height: 44px;
-        }
-    </style>
+    <link rel="stylesheet" href="__PUBLIC__/css/home/teamlist.css" type="text/css">
     <!-- [if IE lt 10] -->
         <link rel="stylesheet" href="__PUBLIC__/css/home/ltIE8.css">
     <!-- [endif] -->
@@ -80,11 +16,11 @@
 <body>
     <include file="Public/nav" />
     <div class="bannerbox">
-        <img src="__PUBLIC__/images/科技团队bk.png"> 
+        <img src="__PUBLIC__/images/team_bk.png"> 
     </div>
     <div class="infolist-main">
         <div class="leftmain">
-            <div class="mainlefttitle"><img src="__PUBLIC__/images/科技团队.png"></div>
+            <div class="mainlefttitle"><img src="__PUBLIC__/images/team.png"></div>
                 <div class="add"> 
                     <?php if (session('uid')): ?>
                         <?php if (session('type') == 1): ?>
